E1-1168 product tile spacing issues
E1-1168 product tile spacing issues

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
@@ -4537,6 +4537,7 @@
 
       .detail-info-wrap-pricetag {
         margin-top: 0;
+        padding-top: 0;
 
         .price {
           font-size: toRem(26);
@@ -4597,7 +4598,7 @@
 
   .bg-cards .plan-card.tile-table.plan-card .tile-card {
     .tiles-box-list {
-      min-height: 225px;
+      min-height: 207px;
     }
   }
 }
